* s-atacco.ads: Add pragma Inline_Always for functions. 	Fix header format. Add copyright 2001
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46518 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-25  Robert Dewar <dewar@gnat.com>
+
+	* s-atacco.ads: Add pragma Inline_Always for functions.
+	Fix header format. Add copyright 2001
+
 2001-10-25  Ed Schonberg <schonber@gnat.com>
 
 	* par-ch3.adb (P_Subtype_Mark_Resync): for an anonymous array 
