* config/i386/cygwin.h: Search target specfic include directory, if appropriate. * config/i386/cygwin.h: Use proper path for mingw crt files when -mno-cygwin.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46525 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2001-10-26  Christopher Faylor  <cgf@redhat.com>
+
+        * config/i386/cygwin.h: Search target specfic include directory, if
+        appropriate.
+
+2001-10-24  Christopher Faylor  <cgf@redhat.com>
+
+        * config/i386/cygwin.h: Use proper path for mingw crt files when
+        -mno-cygwin.
+
 2001-10-23  Release Manager
 
 	* GCC 3.0.2 Released.
