--- a/gcc-3_0-branch/gcc/config/rs6000/rs6000.md
+++ b/gcc-3_0-branch/gcc/config/rs6000/rs6000.md
@@ -12532,24 +12532,24 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   positive_2 = branch_positive_comparison_operator (operands[3], CCEQmode);
 
   if (! positive_1)
-    operands[1] = gen_rtx (SImode,
-			   rs6000_reverse_condition (GET_MODE (operands[2]),
+    operands[1] = gen_rtx (rs6000_reverse_condition (GET_MODE (operands[2]),
 						     GET_CODE (operands[1])),
-			   operands[2]);
+			   SImode,
+			   operands[2], const0_rtx);
   else if (GET_MODE (operands[1]) != SImode)
-    operands[1] = gen_rtx (SImode,
-			   GET_CODE (operands[1]),
-			   operands[2]);
+    operands[1] = gen_rtx (GET_CODE (operands[1]),
+			   SImode,
+			   operands[2], const0_rtx);
 
   if (! positive_2)
-    operands[3] = gen_rtx (SImode,
-			   rs6000_reverse_condition (GET_MODE (operands[4]),
+    operands[3] = gen_rtx (rs6000_reverse_condition (GET_MODE (operands[4]),
 						     GET_CODE (operands[3])),
-			   operands[4]);
+			   SImode,
+			   operands[4], const0_rtx);
   else if (GET_MODE (operands[3]) != SImode)
-    operands[3] = gen_rtx (SImode,
-			   GET_CODE (operands[3]),
-			   operands[4]);
+    operands[3] = gen_rtx (GET_CODE (operands[3]),
+			   SImode,
+			   operands[4], const0_rtx);
 
   if (positive_1 == positive_2)
     {
