--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-26  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (unstage*): Remove as, ld, collect-ld before
+	moving everything back to the main build directory.
+
 2001-10-26  Christopher Faylor  <cgf@redhat.com>
 
 	* config/i386/cygwin.h: Search target specfic include directory, if
