--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,16 @@
 2001-10-26  Richard Henderson  <rth@redhat.com>
 
+	* cfg.c (clear_aux_for_blocks): Split out of ...
+	(free_aux_for_blocks): here.
+	(clear_aux_for_edges): Split from ...
+	(free_aux_for_edges): here.
+	* basic-block.h: Declare them.
+	* lcm.c (compute_antinout_edge): Use them.
+	(compute_laterin, compute_available, compute_nearerout): Likewise.
+	(optimize_mode_switching): Likewise.
+
+2001-10-26  Richard Henderson  <rth@redhat.com>
+
 	* Makefile.in (unstage*): Remove as, ld, collect-ld before
 	moving everything back to the main build directory.
 
