--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,16 @@
 2001-10-26  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.h (enum reg_class): Add R24_REG, R25_REG;
+	rename PV_REG to R27_REG.
+	(REG_CLASS_CONTENTS, REGNO_REG_CLASS): Update.
+	(REG_CLASS_FROM_LETTER): Update.
+	(PREFERRED_RELOAD_CLASS): Don't widen a reg class.
+	* config/alpha/alpha.md (divsi3): Don't hard-code r24, r25, r27.
+	(udivsi3, modsi3, umodsi3): Likewise.
+	(divdi3, udivdi3, moddi3, umoddi3): Likewise.
+
+2001-10-26  Richard Henderson  <rth@redhat.com>
+
 	* cfg.c (clear_aux_for_blocks): Split out of ...
 	(free_aux_for_blocks): here.
 	(clear_aux_for_edges): Split from ...
