--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-26  Alexandre Oliva  <aoliva@redhat.com>
+
+	* tree-inline.c (remap_decl): Don't copy size and size_unit here.
+	(remap_save_expr): Map a remapped SAVE_EXPR to error_mark_node.
+
 2001-10-26  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.h (enum reg_class): Add R24_REG, R25_REG;
