--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-26  Andreas Jaeger  <aj@suse.de>
+
+	* flow.c (clear_log_links): Remove unused variable.
+	* cfgcleanup.c (cleanup_cfg): Likewise.
+
 2001-10-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* tree-inline.c (remap_decl): Don't copy size and size_unit here.
@@ -42,12 +47,12 @@
 
 	* output.h (default_exception_section, default_eh_frame_section):
 	Move prototypes outside of macro guard.
-	
+
 	* crtstuff.c: Fix #endif comment.
 
 Thu Oct 25 12:21:58 2001  Jeffrey A Law  (law@cygnus.com)
 
-	* doc/md.texi (movMM): Clarify semantics of storing into a 
+	* doc/md.texi (movMM): Clarify semantics of storing into a
 	non-paradoxical SUBREG.
 
 2001-10-25  Zack Weinberg  <zack@codesourcery.com>
@@ -274,11 +279,11 @@ Tue Oct 23 13:05:53 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	* c-common.c (warn_div_by_zero): New.
 	* c-common.h (warn_div_by_zero): New.
 	* c-decl.c (c_decode_option): Take it on the command line.
- 	* c-typeck.c (build_binary_op): Warn about division by zero.
+	* c-typeck.c (build_binary_op): Warn about division by zero.
 	* doc/invoke.texi: Document the new command line option, fix
 	documentation of -Wmultichar.
- 	* testsuite/gcc.dg/divbyzero.c: New tests.
- 	* testsuite/gcc.dg/noncompile/20010524-1.c: Update.
+	* testsuite/gcc.dg/divbyzero.c: New tests.
+	* testsuite/gcc.dg/noncompile/20010524-1.c: Update.
 
 Tue Oct 23 15:30:23 CEST 2001  Jan Hubicka  <jh@suse.cz>
 
