--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-26  Geert Bosch <bosch@gnat.com>
+
+	* gnat_rm.texi: Add GNAT Reference Manual.
+
 2001-10-25  Robert Dewar <dewar@gnat.com>
 
 	* sem_ch8.adb (Analyze_Package_Renaming): Skip analysis if Name 
