* g-os_lib.adb (Normalize_Pathname): Preserve the double slash         ("//") that precede the drive letter on Interix.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46542 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-26  Vincent Celier <celier@gnat.com>
+
+	* g-os_lib.adb (Normalize_Pathname): Preserve the double slash 
+        ("//") that precede the drive letter on Interix.
+
 2001-10-26  Geert Bosch <bosch@gnat.com>
 
 	* gnat_rm.texi: Add GNAT Reference Manual.
