* prj-attr.ads: Minor reformatting 	Add ??? comment (this whole spec has almost no comments)
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46543 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-26  Robert Dewar <dewar@gnat.com>
+
+	* prj-attr.ads: Minor reformatting
+	Add ??? comment (this whole spec has almost no comments)
+
 2001-10-26  Vincent Celier <celier@gnat.com>
 
 	* g-os_lib.adb (Normalize_Pathname): Preserve the double slash 
