* prj-attr.adb: Minor reformatting throughout
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46544 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,9 @@
 2001-10-26  Robert Dewar <dewar@gnat.com>
 
+	* prj-attr.adb: Minor reformatting throughout
+
+2001-10-26  Robert Dewar <dewar@gnat.com>
+
 	* prj-attr.ads: Minor reformatting
 	Add ??? comment (this whole spec has almost no comments)
 
