--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,9 @@
 2001-10-26  Robert Dewar <dewar@gnat.com>
 
+	* prj-util.adb: Minor reformatting
+
+2001-10-26  Robert Dewar <dewar@gnat.com>
+
 	* prj-attr.adb: Minor reformatting throughout
 
 2001-10-26  Robert Dewar <dewar@gnat.com>
