--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,9 @@
 2001-10-26  Robert Dewar <dewar@gnat.com>
 
+	* prj-util.adb: Minor reformatting. Fix bad header format.
+
+2001-10-26  Robert Dewar <dewar@gnat.com>
+
 	* sinfo.ads: Define Associated_Node to overlap Entity field. Cleanup.
 	
 	* sinfo.ads: Clarify use of Associated_Node (documentation only).
