--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-10-26  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md (4 anonymous patterns): New.
+
+2001-10-26  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.c (get_shift_alg): Clean up.  Return the
 	algorithm through the shift_info structure.
 	(emit_a_shift): Update the use of get_shift_alg.
