--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-26  Alexandre Oliva  <aoliva@redhat.com>
+
+	* cse.c (check_for_label_ref): Don't require REG_LABEL notes for
+	non-local label_refs.
+
 2001-10-26  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md (4 anonymous patterns): New.
