* tree-inline.c (WALK_SUBTREE_TAIL): New macro. (walk_tree): Use it for tail calls where appropriate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46556 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-10-26  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tree-inline.c (WALK_SUBTREE_TAIL): New macro.
+	(walk_tree): Use it for tail calls where appropriate.
+
+2001-10-26  Alexandre Oliva  <aoliva@redhat.com>
+
 	* cse.c (check_for_label_ref): Don't require REG_LABEL notes for
 	non-local label_refs.
 
