--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-26  Kazu Hirata  <kazu@hxi.com>
+
+	* s390/s390.c: Fix comment typos.
+	* s390/s390.h: Likewise.
+	* s390/s390.md: Likewise.
+
 2001-10-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* tree-inline.c (WALK_SUBTREE_TAIL): New macro.
