--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -2902,7 +2902,7 @@
 ;
 ; The following insn is used when it is known that operand one is the stack pointer,
 ; and operand two is small enough to fit in the displacement field
-; In this case, the result will be a address
+; In this case, the result will be an address
 ;
 
 (define_insn "addaddr"
