--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-26  Robert Dewar <dewar@gnat.com>
+
+	* sinfo.adb: Define Associated_Node to overlap Entity field. Cleanup.
+
 2001-10-26  Richard Kenner <kenner@gnat.com>
 
 	* gmem.c (__gnat_gmem_read_next): Properly check for EOF
