* gnat_rm.texi: Use @./@: where appropriate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46566 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-26  Florian Weimer  <fw@deneb.enyo.de>
+
+	* gnat_rm.texi: Use @./@: where appropriate.
+
 2001-10-26  Robert Dewar <dewar@gnat.com>
 
 	* sinfo.adb: Define Associated_Node to overlap Entity field. Cleanup.
