* trans.c (gigi): Fix non determinism leading to bootstrap 	comparison failures for debugging information.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46567 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-27  Laurent Guerby <guerby@acm.org>
+
+	* trans.c (gigi): Fix non determinism leading to bootstrap
+	comparison failures for debugging information.
+
 2001-10-26  Florian Weimer  <fw@deneb.enyo.de>
 
 	* gnat_rm.texi: Use @./@: where appropriate.
