--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 27 16:31:23 CEST 2001  Jan Hubicka  <jh@suse.cz>
+
+	* ifcvt.c (if_convert): Call clear_aux_for_blocks.
+
 Sat Oct 27 12:12:09 CEST 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (merge_blocks_move_predecessor_nojumps,
