* ChangeLog.0, ChangeLog.1, ChangeLog.2, ChangeLog.3, ChangeLog.4, 	ChangeLog.5, ChangeLog, ChangeLog.lib, FSFChangeLog.10, ONEWS, 	c-common.c, caller-save.c, cfg.c, cfgcleanup.c, cfgrtl.c, 	collect2.c, df.h, diagnostic.h, final.c, gcse.c, gthr.h, 	haifa-sched.c, jump.c, local-alloc.c, profile.c, protoize.c, 	regmove.c, reload1.c, rtlanal.c, sched-vis.c, ssa.c, stmt.c, 	system.h, toplev.c: Fix spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46580 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog.1
+++ b/gcc/ChangeLog.1
@@ -448,7 +448,7 @@ Mon May  3 22:38:41 1999  David Edelsohn  <edelsohn@gnu.org>
 
 Mon May  3 14:45:23 1999  Jeffrey A Law  (law@cygnus.com)
 
-	* mn10200.md (btst insns): btst does not leave cc0 in a useable
+	* mn10200.md (btst insns): btst does not leave cc0 in a usable
 	state for redundant tst eliminatino.
 	* mn10300.md (btst insns): Likewise.
 
