--- a/gcc/ChangeLog.3
+++ b/gcc/ChangeLog.3
@@ -366,7 +366,7 @@ Tue Jun 27 12:03:03 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 	offset, plus handle DW_CFA_def_cfa_expression.
 	(def_cfa_1): Use to be dwarf2out_def_cfa, only now it uses a
 	cfa_loc record.
-	(dwarf2out_def_cfa): Entry point maintained for compatability.
+	(dwarf2out_def_cfa): Entry point maintained for compatibility.
 	(dwarf_cfi_name): Add DW_CFA_def_cfa_expression.
 	(cfa_reg, cfa_offset): Replace with cfa_loc record 'cfa'.
 	(cfa_store_reg, cfa_store_offset): Replace with cfa_loc 'cfa_store'.
@@ -7928,7 +7928,7 @@ Thu Apr  6 19:11:47 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 Thu Apr  6 00:30:50 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
-	* sh.h (FUNCTION_ARG_PARTIAL_NREGS): Accomodate an unsigned
+	* sh.h (FUNCTION_ARG_PARTIAL_NREGS): Accommodate an unsigned
 	GET_MODE_SIZE.
 
 Wed Apr  5 23:17:10 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
@@ -13338,7 +13338,7 @@ Sat Feb 12 01:44:26 MET 2000  Jan Hubicka  <jh@suse.cz>
 	(arm_valid_type_attribute_p): New function: Return true if the
 	attribute is a valid, arm specific, attribute.
 	(arm_comp_type_attribute): New function: Return true if the
-	two types have compatable, arm specific, attributes.
+	two types have compatible, arm specific, attributes.
 
 	* config/arm/arm.h (CUMULATIVE_ARGS): Redefine to be a
 	structure.
@@ -13774,7 +13774,7 @@ Tue Feb  8 15:51:50 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 Tue Feb  8 07:53:55 2000  Jan Hubicka  <jh@suse.cz>
 
-	* i386.md (addqi3_cc): Fix contraints.
+	* i386.md (addqi3_cc): Fix constraints.
 
 Tue Feb  8 01:39:45 2000  Hans-Peter Nilsson  <hp@bitrange.com>
 
@@ -14858,7 +14858,7 @@ Mon Jan 24 16:56:10 2000  Jim Wilson  <wilson@cygnus.com>
 
 2000-01-24  Christopher Faylor <cgf@cygnus.com>
 
-	* config/i386/t-cygwin: Accomodate new winsup directory layout
+	* config/i386/t-cygwin: Accommodate new winsup directory layout
 	when searching for include files.
 
 2000-01-24  Richard Henderson  <rth@cygnus.com>
