--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -4017,7 +4017,7 @@ Tue Nov 14 12:34:56 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2000-11-12  Mark Mitchell  <mark@codesourcery.com>
 
-	* jump.c (delete_computation): Don't assume that just becuase an
+	* jump.c (delete_computation): Don't assume that just because an
 	instruction sets a register, that register is dead.
 
 2000-11-12  Neil Booth  <neilb@earthling.net>
@@ -6719,8 +6719,8 @@ Tue Oct 10 23:14:33 2000  Denis Chertykov  <denisc@overta.ru>
 2000-10-07  Will Cohen  <wcohen@redhat.com>, Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Remove the memory alternative and correct
-	the insn lengths in the templates for sign extention and zero
-	extention.
+	the insn lengths in the templates for sign extension and zero
+	extension.
 
 2000-10-07  Richard Henderson  <rth@cygnus.com>
 
@@ -13466,7 +13466,7 @@ Tue Jul 25 23:08:33 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 2000-07-24  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (emit_multi_reg_push): Generate a
-	REG_FRAME_RELEATED_NOTE that is compatable with the code in
+	REG_FRAME_RELEATED_NOTE that is compatible with the code in
 	dwarf2out_debug_frame_expr.
 
 2000-07-24  Jason Merrill  <jason@redhat.com>
