--- a/gcc/ChangeLog.5
+++ b/gcc/ChangeLog.5
@@ -6180,7 +6180,7 @@ Tue Apr 10 17:45:50 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	(next_ls_expr): Next expression in the list.
 	(simple_mem): Check if expression qualifies for ld/st expression list.
 	(invalidate_any_buried_refs): Remove from expression list if its
-	used in some other way we dont understand.
+	used in some other way we don't understand.
 	(compute_ld_motion_mems): Find all potential enhanced load motion
 	expression.
 	(trim_ld_motion_mems): Remove any expressions which are invalid.
@@ -9315,7 +9315,7 @@ Fri Mar  2 11:59:43 CET 2001  Jan Hubicka  <jh@suse.cz>
 	null terminated.  Use the new search_from member variable
 	of cpp_buffer.
 	(_cpp_compare_file_date): Similarly.
-	(search_from): New function, similiar to actual_directory.
+	(search_from): New function, similar to actual_directory.
 	(actual_directory): Delete.
 	(remap_filename): Update.  loc->name may not be null terminated.
 	(struct file_name_list): Rename search_path.  Update.
@@ -12210,7 +12210,7 @@ Tue Jan 16 17:20:43 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	* config/i386/i386.c (asm_output_function_prefix): Remove.
 	(ix86_asm_file_end): New.
 	(load_pic_register): Generate pic_label_name into a
-	staticly allocated buffer.
+	statically allocated buffer.
 	* config/i386/i386-protos.h: Update.
 	* config/i386/i386.h (ASM_OUTPUT_FUNCTION_PREFIX): Remove.
 	(ASM_FILE_END): New.
@@ -13931,7 +13931,7 @@ Fri Jan  5 16:29:49 MET 2001  Jan Hubicka  <jh@suse.cz>
 2001-01-05  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sh/sh.md (prget, prset): New insn types.
-	(return delay slot): Dont' allow prset.
+	(return delay slot): Don't allow prset.
 	(call, sfunc delay slot): Don't allow prget.
 	(movsi_i, movsi_ie, movsi_i_lowpart): Create separate alternatives
 	for prset and prget.
