* 86numaux.adb, a-tigeau.ads, a-wtgeau.ads, decl.c, exp_ch6.adb, 	exp_ch9.adb, exp_util.adb, fname-sf.ads, freeze.ads, g-awk.adb, 	g-comlin.ads, g-dirope.adb, g-dyntab.ads, g-socket.ads, 	g-table.ads, g-traceb.ads, gnat-style.texi, gnatchop.adb, init.c, 	layout.adb, layout.ads, mdllfile.ads, mlib-fil.ads, osint.ads, 	s-fatgen.adb, s-imgrea.adb, s-taprop.ads, s-tasdeb.ads, 	sem_aggr.adb, sem_attr.adb, sem_case.ads, sem_ch13.adb, 	sem_ch3.adb, sem_elab.adb, sem_maps.ads, sem_res.adb, 	sem_util.ads, sinfo.ads, sinput.ads, table.adb, table.ads, 	types.ads, urealp.adb: Fix spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46581 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/gnat-style.texi
+++ b/gcc/ada/gnat-style.texi
@@ -366,7 +366,7 @@ a follows:
 
 @noindent
 The "elsif", "else" and "end if" always line up with the "if" keyword. The
-prefered location for splitting the line is before "and" or "or". The
+preferred location for splitting the line is before "and" or "or". The
 continuation of a condition is indented with two spaces or as many as needed
 to make nesting clear.
 As exception, if conditions are closely related either of the following is
