--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun Oct 28 16:48:09 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* genrecog.c (write_switch):  Output if before switch for
+	DT_elt_zero_wide_safe.
+
 2001-10-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (toplev.o, halfpic.o): Depend on halfpic.h
