--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/gcc.texi: Document use of "dependent" and American spelling.
+
 Sun Oct 28 17:05:36 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* expr.c (emit_group_load): Support CONCATs by storing them to memory
