--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -3840,7 +3840,7 @@ optimization will not be done.
 The maximum number of passes of GCSE to run.
 
 @item max-pending-list-length
-The maximum number of pending dependancies scheduling will allow
+The maximum number of pending dependencies scheduling will allow
 before flushing the current state and starting over.  Large functions
 with few branches or calls can create excessively large lists which
 needlessly consume memory and resources.
