* doc/invoke.texi: Fix spelling.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46592 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* doc/invoke.texi: Fix spelling.
+
 	* doc/gcc.texi: Document use of "dependent" and American spelling.
 
 2001-10-26  Andrew Cagney  <ac131313@redhat.com>
