* ChangeLog.1, ChangeLog.2, ChangeLog, class.c, decl2.c, search.c, 	semantics.c, spew.c: Fix spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46593 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog.1
+++ b/gcc/cp/ChangeLog.1
@@ -753,7 +753,7 @@ Wed Jul 19 13:23:12 1995  Gerald Baumgartner  <gb@alexander.cs.purdue.edu>
 	(init_decl_processing): Initialize vb_off_identifier.
 	Renamed vt_off_identifier from offset_identifier.
 	* sig.c (build_signature_method_call): Renamed offset_identifier and
-	local variable offset to vt_off_identifer and vt_off, respecitively.
+	local variable offset to vt_off_identifier and vt_off, respectively.
 	* sig.c (build_signature_table_constructor): Renamed offset to vt_off.
 
 	* decl.c (init_decl_processing): Add vb_off field to
