--- a/gcc/cp/ChangeLog.2
+++ b/gcc/cp/ChangeLog.2
@@ -3319,7 +3319,7 @@ Mon Aug 23 22:17:20 1999  Mumit Khan  <khan@xraylith.wisc.edu>
 	(finish_struct_1): Likewise.
 	(init_class_processing): Likewise.
 	* decl.c (push_using_decl): Likewise.
-	(init_decl_processsing): Likewise.
+	(init_decl_processing): Likewise.
 	(grokvardecl): Likewise.
 	(build_ptrmemfunc_type): Likewise.
 	(grokdeclarator): Likewise.
@@ -4168,7 +4168,7 @@ Thu Aug  5 02:40:42 1999  Jeffrey A Law  (law@cygnus.com)
 	
 	* cp-tree.h (abstract_virtuals_error): Change declaration.
 	* typeck2.c (abstract_virtuals_error): Check to see if an error
-	ocurred, and return a boolean value accordingly.
+	occurred, and return a boolean value accordingly.
 	(build_functional_cast): Adjust accordingly.
 	* class.c (finish_struct_1): Likewise.
 	* cvt.c (ocp_convert): Likewise.
@@ -6427,7 +6427,7 @@ Thu Feb 18 23:40:01 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 1999-02-10  Jason Merrill  <jason@yorick.cygnus.com>
 
-	* decl.c (grokdeclarator): Catch wierd declarators.
+	* decl.c (grokdeclarator): Catch weird declarators.
 	* decl2.c (finish_file): Don't abort because of namespace parsing
 	failure.
 	(check_decl_namespace): Remove.
