--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* ChangeLog.1, ChangeLog.2, ChangeLog, class.c, decl2.c, search.c,
+	semantics.c, spew.c: Fix spelling errors.
+
 2001-10-27  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	* decl2.c (validate_nonmember_using_decl): Handle NAMESPACE_DECL.
@@ -2329,7 +2334,7 @@ Thu Apr  5 16:54:29 2001  J"orn Rennecke <amylaar@redhat.com>
 	(inlinable_function_p): Likewise, fix typo in comment,
 	function is not inlinable if it already inlined function currently
 	being optimized.
-	(expand_call_inline): Add fn to inlined_fns if neccessary.
+	(expand_call_inline): Add fn to inlined_fns if necessary.
 	(optimize_function): Initialize inlined_fns.
 	Save inlined_fns into DECL_INLINED_FNS after expanding inlines.
 	* decl.c (mark_inlined_fns): New function.
@@ -6889,7 +6894,7 @@ Sat May 27 11:25:46 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	(DECL_USE_VTT_PARM): Likewise.
 	(DECL_NEEDS_VTT_PARM_P): Likewise.
 	(get_vtt_name): Declare.
-	(build_artifical_parm): Likewise.
+	(build_artificial_parm): Likewise.
 	(fixup_all_virtual_upcast_offsets): Likewise.
 	(expand_indirect_vtbls_init): Remove.
 	* call.c (build_new_method_call): Pass the vtt to subobject
@@ -8107,7 +8112,7 @@ Sat Apr 15 16:00:01 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2000-04-05  Benjamin Kosnik  <bkoz@cygnus.com>
 
-	* decl2.c: Make flag_honor_std dependant on ENABLE_STD_NAMESPACE.
+	* decl2.c: Make flag_honor_std dependent on ENABLE_STD_NAMESPACE.
 
 2000-04-05  Mark Mitchell  <mark@codesourcery.com>
 
@@ -8934,7 +8939,7 @@ Mon Mar  6 08:46:47 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	(build_over_call): Likewise. Don't warn about dubious
 	conversions here. Adjust convert_default_arg calls.
 	(convert_default_arg): Add context parameters for diagnostics.
-	Pass throught to convert_like_with_context.
+	Pass through to convert_like_with_context.
 	* cp-tree.h (convert_default_arg): Add context parameters.
 	(dubious_conversion_warnings): Prototype new function.
 	* typeck.c (convert_arguments): Adjust convert_default_arg call.
@@ -9963,8 +9968,8 @@ Wed Jan 26 22:19:14 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 	(expand_attr_desc): Likewise.
 	(expand_generic_desc): Likewise.
 
-	* tinfo.cc (__GXX_ABI_VERSION): Test value and existance.
-	* tinfo.h (__GXX_ABI_VERSION): Test value and existance.
+	* tinfo.cc (__GXX_ABI_VERSION): Test value and existence.
+	* tinfo.h (__GXX_ABI_VERSION): Test value and existence.
 
 2000-01-23  Mark Mitchell  <mark@codesourcery.com>
 
