2001-10-28  David O'Brien  <obrien@FreeBSD.org> 	* config/elfos.h(_USING_ELFOS_H): Define. 	* config/rs6000/rs6000.c: Test for _USING_ELFOS_H rather than USING_SVR4_H 	to know when to turn on ELF support. (svr4.h includes elfos.h)
Approved by:  David Edelsohn <dje@watson.ibm.com>
              Message-Id: <200110261641.MAA23532@makai.watson.ibm.com>


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46594 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-28  David O'Brien  <obrien@FreeBSD.org>
+
+	* config/elfos.h(_USING_ELFOS_H): Define.
+	* config/rs6000/rs6000.c: Test for _USING_ELFOS_H rather than USING_SVR4_H
+	to know when to turn on ELF support. (svr4.h includes elfos.h)
+
 2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* doc/invoke.texi: Fix spelling.
